package Model.Move;

public interface IObserverMoveLog {
    public void updateGameHistoryPanel();
}

