package Model.Player;

public interface IPlayerObserver {

    //TODO String change ?????
    public void updatePlayerName();
}
