package Model.Player;

public interface IPlayerObserverGame {

    //TODO String change ?????
    public void updateBoard();
    public void updateTakenPiecePanel();
}
